svc-mngo-db.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-mngo-db
  namespace: default  
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mngo-db
